z-index and slide fix
ong sticky is so sexy

--- a/style.css
+++ b/style.css
@@ -27,9 +27,22 @@ body {
 }
 
 #content{
-    padding-top: 20%;
+    /* padding-top: 20%; */
     color: rgb(211, 216, 216);
+    padding-top: 100vh;
+    /* text-align: center; */
+}
+
+.title-slide {
+    display: flex;
+    justify-content: center;
     text-align: center;
+    align-items: center;
+    z-index: -1;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0px;
 }
 
 #firstname{
